<resources>
    <string name="app_name">BookShelf</string>
    <string name="create_account">Create Account</string>
    <string name="sign_up_to_get_started">Sign up to get started!</string>
    <string name="welcome">Welcome,</string>
    <string name="sign_in_to_continue">Sign in to continue!</string>
    <string name="emailid">EmailId</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="full_name">Full name</string>
    <string name="country">Country</string>
    <string name="apply"><u>Apply</u></string>
</resources>