<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/clr_303030">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/welcome_tv"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="32dp"
            android:text="@string/welcome"
            android:textSize="16sp"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="@color/white"
            android:layout_marginStart="16dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sign_in_continue_tv"
            app:layout_constraintTop_toBottomOf="@id/welcome_tv"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="4dp"
            android:text="@string/sign_in_to_continue"
            android:textSize="14sp"
            android:fontFamily="@font/montserrat_regular"
            android:textColor="@color/clr_d7d7d7"
            android:layout_marginStart="16dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/email_id_text_input_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintTop_toBottomOf="@id/sign_in_continue_tv"
            android:layout_marginTop="48dp"
            android:hint="@string/emailid"
            app:boxCornerRadiusBottomStart="6dp"
            app:boxCornerRadiusBottomEnd="6dp"
            app:boxCornerRadiusTopEnd="6dp"
            app:boxCornerRadiusTopStart="6dp"
            app:hintTextColor="@color/clr_d7d7d7"
            android:theme="@style/TextInputLayoutStyle">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email_id_edit_text"
                android:maxLines="1"
                android:ellipsize="end"
                android:fontFamily="@font/montserrat_semibold"
                android:textCursorDrawable="@null"
                android:textColor="@color/white"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/password_text_input_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintTop_toBottomOf="@id/email_id_text_input_layout"
            android:layout_marginTop="32dp"
            android:hint="@string/password"
            app:boxCornerRadiusBottomStart="6dp"
            app:boxCornerRadiusBottomEnd="6dp"
            app:boxCornerRadiusTopEnd="6dp"
            app:boxCornerRadiusTopStart="6dp"
            app:hintTextColor="@color/clr_d7d7d7"
            android:theme="@style/TextInputLayoutStyle">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password_edit_text"
                android:fontFamily="@font/montserrat_semibold"
                android:maxLines="1"
                android:ellipsize="end"
                android:textCursorDrawable="@null"
                android:inputType="textPassword"
                android:textColor="@color/white"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/password_text_input_layout"
            app:layout_constraintTop_toBottomOf="@id/password_text_input_layout"
            android:text="@string/forgot_password"
            android:textColor="@color/white"
            android:layout_marginTop="2dp"
            android:textSize="12sp"
            android:fontFamily="@font/montserrat_regular"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/login_btn"
            app:layout_constraintTop_toBottomOf="@id/password_text_input_layout"
            android:layout_marginTop="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/login"
            android:textAllCaps="false"
            android:gravity="center"
            android:paddingVertical="8dp"
            android:fontFamily="@font/montserrat_semibold"
            android:background="@color/white"
            android:layout_marginHorizontal="32dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sign_up_tv"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="6dp"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:text="I'm a new User. Sign Up"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>